Implemented rough support for serializing/deserializing entities (needs a bit of work).

--- a/Hect/Hect.vcxproj
+++ b/Hect/Hect.vcxproj
@@ -22,6 +22,7 @@
     <ClCompile Include="Source\Asset\AssetCache.cpp" />
     <ClCompile Include="Source\Core\Any.cpp" />
     <ClCompile Include="Source\Core\DataValue.cpp" />
+    <ClCompile Include="Source\Core\DataValueLoader.cpp" />
     <ClCompile Include="Source\Core\Engine.cpp" />
     <ClCompile Include="Source\Core\Error.cpp" />
     <ClCompile Include="Source\Core\Format.cpp" />
@@ -37,6 +38,7 @@
     <ClCompile Include="Source\Entity\Entity.cpp" />
     <ClCompile Include="Source\Entity\EntityAttributes.cpp" />
     <ClCompile Include="Source\Entity\EntityComponent.cpp" />
+    <ClCompile Include="Source\Entity\EntityFactory.cpp" />
     <ClCompile Include="Source\Entity\EntitySystem.cpp" />
     <ClCompile Include="Source\Entity\Scene.cpp" />
     <ClCompile Include="Source\Entity\Systems\CameraSystem.cpp" />
@@ -119,6 +121,8 @@
     <ClInclude Include="Source\Entity\Entity.h" />
     <ClInclude Include="Source\Entity\EntityAttributes.h" />
     <ClInclude Include="Source\Entity\EntityComponent.h" />
+    <ClInclude Include="Source\Entity\EntityComponentSerializer.h" />
+    <ClInclude Include="Source\Entity\EntityFactory.h" />
     <ClInclude Include="Source\Entity\EntitySystem.h" />
     <ClInclude Include="Source\Entity\Scene.h" />
     <ClInclude Include="Source\Entity\Systems\CameraSystem.h" />
@@ -190,6 +194,7 @@
     <None Include="Source\Core\Engine.inl" />
     <None Include="Source\Entity\Entity.inl" />
     <None Include="Source\Entity\EntityComponent.inl" />
+    <None Include="Source\Entity\EntityFactory.inl" />
     <None Include="Source\Entity\EntitySystem.inl" />
     <None Include="Source\Entity\Scene.inl" />
     <None Include="Source\Graphics\MeshBuilder.inl" />
