--- a/Hect/Hect.vcxproj.filters
+++ b/Hect/Hect.vcxproj.filters
@@ -294,6 +294,9 @@
     <ClCompile Include="Source\Entity\System.cpp">
       <Filter>Source\Entity</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Entity\Systems\BehaviorSystem.cpp">
+      <Filter>Source\Entity\Systems</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Asset\AssetCache.h">
@@ -553,6 +556,12 @@
     </ClInclude>
     <ClInclude Include="Source\Entity\System.h">
       <Filter>Source\Entity</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Entity\Components\Behavior.h">
+      <Filter>Source\Entity\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Entity\Systems\BehaviorSystem.h">
+      <Filter>Source\Entity\Systems</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
