--- a/Hect/Tests/SystemTests/SystemTests.vcxproj.filters
+++ b/Hect/Tests/SystemTests/SystemTests.vcxproj.filters
@@ -19,6 +19,9 @@
     <ClInclude Include="Source\TaskPoolTests.h">
       <Filter>Source</Filter>
     </ClInclude>
+    <ClInclude Include="Source\EntityTests.h">
+      <Filter>Source</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Source">
