--- a/SolidBlack/SolidBlack.vcxproj.filters
+++ b/SolidBlack/SolidBlack.vcxproj.filters
@@ -14,9 +14,6 @@
     <ClCompile Include="Source\DeferredRenderingSystem.cpp">
       <Filter>Source</Filter>
     </ClCompile>
-    <ClCompile Include="Source\FreeCameraControllerSystem.cpp">
-      <Filter>Source</Filter>
-    </ClCompile>
     <ClCompile Include="Source\Player.cpp">
       <Filter>Source</Filter>
     </ClCompile>
@@ -24,6 +21,9 @@
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="Source\TestState.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\FreeCameraController.cpp">
       <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
@@ -35,9 +35,6 @@
       <Filter>Source</Filter>
     </ClInclude>
     <ClInclude Include="Source\FreeCameraController.h">
-      <Filter>Source</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\FreeCameraControllerSystem.h">
       <Filter>Source</Filter>
     </ClInclude>
     <ClInclude Include="Source\PacketType.h">
