--- a/Hect/Hect.vcxproj
+++ b/Hect/Hect.vcxproj
@@ -34,6 +34,7 @@
     <ClCompile Include="Source\Entity\Components\Camera.cpp" />
     <ClCompile Include="Source\Entity\Components\Geometry.cpp" />
     <ClCompile Include="Source\Entity\Components\RigidBody.cpp" />
+    <ClCompile Include="Source\Entity\Components\Behavior.cpp" />
     <ClCompile Include="Source\Entity\Components\Transform.cpp" />
     <ClCompile Include="Source\Entity\Entity.cpp" />
     <ClCompile Include="Source\Entity\EntityAttributes.cpp" />
