--- a/SolidBlack/Deploy/Settings.json
+++ b/SolidBlack/Deploy/Settings.json
@@ -14,6 +14,6 @@
     "graphics" :
     {
         "compositorShader" : "Shaders/Compositor.shader",
-        "screenMesh" : "Meshes/Screen.mesh"
+        "windowMesh" : "Meshes/Window.mesh"
     }
 }
